[gd_scene load_steps=2 format=3 uid="uid://cbwepsrdlim5j"]

[ext_resource type="Script" path="res://addons/goo_connection/GooConnectionTab.gd" id="1_d0av2"]

[node name="Connections" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0av2")

[node name="GooPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GooCheckboxesVBoxContainer" type="VBoxContainer" parent="GooPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GooNotConnectableLabel" type="Label" parent="GooPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -11.5
offset_right = 86.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "no neighbour found"

[node name="NoGooSelectedLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -11.5
offset_right = 62.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No goo selected. Please select one"
